# cowculator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: pages.yml  train.yml
cowculator/: pipeline.py
web/: edge_bundle.json  index.html
