[project]
name = "cowculator"
version = "0.1.0"
description = "Cowculator: forecast catering costs with ridiculous swagger"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.7.1",
]
